# TraeCy

./: README.md
.trae/: .env.example  .mcp.json  README.md  alignment_server.py  pyproject.toml  requirements.txt
.trae/rules/: data contracts.md
.trae/skills/assess-goal-allignment/: SKILL.md
.trae/tests/: __init__.py  test_alignment.py
